--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,25 @@
         <scope>test</scope>
      </dependency>
     <!-- Support for JDK 9 and above -->
-  <dependency>
+    <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
       <version>4.0.0</version>
       <scope>test</scope>
+    </dependency>
+    <!-- Jakarta Annotations API for @PostConstruct and other annotations -->
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.1.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- OSGi annotations to resolve warning -->
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.annotation.bundle</artifactId>
+      <version>2.0.0</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
