--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,22 @@
       <version>2.0.0</version>
       <scope>provided</scope>
     </dependency>
+    <!-- REMOVED: Legacy javax dependencies that conflicted with Jakarta EE
+         These dependencies caused startup timeout issues by conflicting with
+         Jakarta EE annotations, particularly @PostConstruct behavior
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
+      <version>2.0</version>
+      <scope>provided</scope>
+    </dependency>
+    -->
   </dependencies>
 
   <build>
